@@ -1,3 +1,8 @@
+2011-11-16  Mark Ellis  <mark@mpellis.org.uk>
+
+	* update build system; drop references to librapi2 to use
+	  synce-core
+
 2009-07-16  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 0.14 release
